[gd_scene load_steps=7 format=3 uid="uid://vdrt2j1xpd82"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_1tkxw"]
[ext_resource type="Texture2D" uid="uid://cuk423jlajdrb" path="res://2111.w015.n001.624B.p15.624.jpg" id="1_l7ara"]
[ext_resource type="FontFile" uid="uid://cus18svvcnps" path="res://hHachimaki.ttf" id="2_5ftmb"]
[ext_resource type="AudioStream" uid="uid://djn00u7odx8p2" path="res://game-music-loop-7-145285.mp3" id="4_3bivb"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pk6wv"]
texture = ExtResource("1_l7ara")
modulate_color = Color(0.881937, 0.881937, 0.881937, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4wupb"]
bg_color = Color(0.20181, 0.21, 0.1974, 0.996078)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1tkxw")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_pk6wv")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -256.0
offset_right = 767.0
offset_bottom = 256.0
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.98, 0.577383, 0.147, 1)
theme_override_fonts/font = ExtResource("2_5ftmb")
theme_override_font_sizes/font_size = 80
text = "Village Defense "

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_horizontal = 0

[node name="StartGame" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5ftmb")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_4wupb")
text = "Start game"

[node name="Setting" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5ftmb")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_4wupb")
text = "Setting"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5ftmb")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_4wupb")
text = "Exit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_3bivb")
autoplay = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Setting" to="." method="_on_setting_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
